--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
   --darkgray: #333;
   --navy: #17050F;
   --blue: #082840;
-  --white: #fff;
+  --white: #ffffff;
 }
 
 /* Global stylesheet */
@@ -21,41 +21,66 @@ body {
   color: var(--darkgray);
   background-color: var(--white);
 }
+
+.tmpl-post {
+  width: 100%;
+  max-width: 800px;
+}
+
+.tmpl-post > * + * {
+  margin-top: 16px;
+}
+
+.tmpl-post ol,
+.tmpl-post ul {
+  padding-left: 32px;
+}
+
 p:last-child {
   margin-bottom: 0;
 }
+
 p,
 .tmpl-post li,
 img {
   max-width: 37.5em; /* 600px /16 */
 }
+
 p,
 .tmpl-post li {
   line-height: 1.45;
 }
+
 a[href] {
   color: var(--blue);
 }
+
 a[href]:visited {
   color: var(--navy);
 }
+
 main {
   padding: 1rem;
 }
+
 main :first-child {
   margin-top: 0;
 }
+
 header {
   border-bottom: 1px dashed var(--lightgray);
 }
+
 header:after {
   content: "";
   display: table;
   clear: both;
 }
+
 table {
   margin: 1em 0;
 }
+
 table td,
 table th {
   padding-right: 1em;
@@ -66,6 +91,7 @@ code {
   font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
   line-height: 1.5;
 }
+
 pre {
   font-size: 14px;
   line-height: 1.375;
@@ -124,6 +150,7 @@ code {
   list-style: none;
   padding: 0;
 }
+
 .postlist-item {
   display: flex;
   flex-wrap: wrap;
@@ -131,6 +158,7 @@ code {
   counter-increment: start-from -1;
   line-height: 1.8;
 }
+
 .postlist-item:before {
   display: inline-block;
   pointer-events: none;
@@ -138,14 +166,17 @@ code {
   line-height: 100%;
   text-align: right;
 }
+
 .postlist-date,
 .postlist-item:before {
   font-size: 0.8125em; /* 13px /16 */
   color: var(--darkgray);
 }
+
 .postlist-date {
   word-spacing: -0.5px;
 }
+
 .postlist-link {
   padding-left: .25em;
   padding-right: .25em;
@@ -153,9 +184,11 @@ code {
   text-underline-offset: 0;
   text-decoration-thickness: 1px;
 }
+
 .postlist-item-active .postlist-link {
   font-weight: bold;
 }
+
 .tmpl-home .postlist-link {
   font-size: 1.1875em; /* 19px /16 */
   font-weight: 700;
@@ -179,14 +212,17 @@ code {
   text-decoration: none;
   line-height: 1.8;
 }
+
 a[href].post-tag,
 a[href].post-tag:visited {
   color: inherit;
 }
+
 a[href].post-tag:hover,
 a[href].post-tag:focus {
   background-color: var(--lightgray);
 }
+
 .postlist-item > .post-tag {
   align-self: center;
 }
@@ -196,6 +232,7 @@ a[href].post-tag:focus {
   background-color: #ffc;
   padding: 1em 0.625em; /* 16px 10px /16 */
 }
+
 .warning ol:only-child {
   margin: 0;
 }
@@ -207,10 +244,12 @@ a[href].post-tag:focus {
   font-style: normal;
   margin-left: .1em;
 }
+
 a[href].direct-link,
 a[href].direct-link:visited {
   color: transparent;
 }
+
 a[href].direct-link:focus,
 a[href].direct-link:focus:visited,
 :hover > a[href].direct-link,
